<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_dark_black">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/LayoutStyle">


<EditText
        android:id="@+id/add_cocktail_title"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_add_title"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_cocktail_ingredients"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_add_content"
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/add_cocktail_yt_link"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_add_yt_link"
        android:inputType="textAutoComplete"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_cocktail_receipe"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_add_ingredients"
        android:textSize="18sp"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"/>

    <Button
        android:id="@+id/button_save"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_cocktail_receipe"
        android:layout_marginBottom="20dp"
        android:text="@string/button_save"
        />

</LinearLayout>
</ScrollView>